--- a/index.html
+++ b/index.html
@@ -21,23 +21,20 @@
             </div>
         </div>
     </header>
-    <body>
-        <div>
-            <div class="development-container">
-                <div class="dev-heading">
-                    <h1 class="development-heading">Why Web Development??</h1>
-                <p class="development-text">Web developers provide businesses with the unique, engaging websites they need to connect with customers.</p>
-                </div>
-                <div class="box-content">
-                    <div>
-                    <h1 class="box-heading">I will Do Coding and Change The World</h1>
-                    <p class="box-content">Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement</p>
-                    <button class="box-btn"></button>
+    <main>
+        <section class="development-section">
+            <div class="title-section"><h3 class="section-title">Why Web Development??</h3>
+                <p class="section-paragraph">Web developers provide businesses with the unique, engaging websites they need to connect with customers.</p></div>
+            <div class="box-content-1">
+                    <div class="box-content">
+                        <h1 class="title">I will Do Coding and Change The World</h1>
+                        <p class="description">Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement</p>
+                        <button class="btn">Download CV</button>
                     </div>
-                    <img src="assets/Layer_1.png" alt="Layer_1">
-                </div>
+                    <img class="banner-image" src="assets/Layer_1.png" alt="">
+                 </div>
             </div>
-        </div>
-    </body>
+        </section>
+    </main>
 </body>
 </html>
