--- a/index.html
+++ b/index.html
@@ -27,14 +27,37 @@
                 <p class="section-paragraph">Web developers provide businesses with the unique, engaging websites they need to connect with customers.</p></div>
             <div class="box-content-1">
                     <div class="box-content">
-                        <h1 class="title">I will Do Coding and Change The World</h1>
+                        <h1 class="title">I will Do Coding and Change The <br> World</h1>
                         <p class="description">Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement</p>
-                        <button class="btn">Download CV</button>
+                        <button class="box-btn">Learn more</button>
                     </div>
-                    <img class="banner-image" src="assets/Layer_1.png" alt="">
+                    <img class="box-image01" src="assets/Layer_1.png" alt="">
+                 </div>
+                 <div class="box-content-1">
+                    <img class="box-image02" src="assets/Layer_1.png" alt="">
+                    <div class="box-content">
+                        <h1 class="title">I will Do Coding and Change The <br> World</h1>
+                        <p class="description">Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement</p>
+                        <button class="box-btn">Learn more</button>
+                    </div>
+                 </div>
+                 <div class="box-content-1">
+                    <div class="box-content">
+                        <h1 class="title">I will Do Coding and Change The <br> World</h1>
+                        <p class="description">Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement</p>
+                        <button class="box-btn">Learn more</button>
+                    </div>
+                    <img class="box-image01" src="assets/Layer_1.png" alt="">
                  </div>
             </div>
         </section>
     </main>
+    <div class="insp-section">
+        <h1 class="insp-title">My Inspiration</h1>
+        <p class="insp-description">Having a bank of the best website design inspirations can speed up your design workflow. With a go-to list of website design inspiration, you can jump into projects faster and more effectively with a surplus of design ideas, and better meet the demands of any creative brief.</p>
+    </div>
+    <div class="iframe-content">
+        <iframe style="border-radius: 16px;" width="1520" height="820" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=ItK_UVhT_Svz1PiD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
