--- a/index.html
+++ b/index.html
@@ -59,5 +59,33 @@
     <div class="iframe-content">
         <iframe style="border-radius: 16px;" width="1520" height="820" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=ItK_UVhT_Svz1PiD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+    <div class="target-section">
+        <section class="target">
+            <div class="target-head">
+                <h1 class="target-title">My Current Target</h1>
+                <p class="target-description">This will not always be the same as the element on which the event was fired, because the event may have fired on a descendant of the element with the handler, and then bubbled up to the element with the handler.</p>
+            </div>
+            <div class="card-container">
+                <div class="card color-1">
+                    <img class="card-image" src="assets/html.png" alt="">
+                    <h1 class="card-title">HTML</h1>
+                    <p class="card-description">yperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
+                    <h3 class="card-footer"><u>Learn more</u></h3>
+                </div>
+                <div class="card color-2">
+                    <img class="card-image" src="assets/html.png" alt="">
+                    <h1 class="card-title">HTML</h1>
+                    <p class="card-description">yperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
+                    <h3 class="card-footer"><u>Learn more</u></h3>
+                </div>
+                <div class="card color-3">
+                    <img class="card-image" src="assets/html.png" alt="">
+                    <h1 class="card-title">HTML</h1>
+                    <p class="card-description">yperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
+                    <h3 class="card-footer"><u>Learn more</u></h3>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
