--- a/index.html
+++ b/index.html
@@ -69,23 +69,31 @@
                 <div class="card color-1">
                     <img class="card-image" src="assets/html.png" alt="">
                     <h1 class="card-title">HTML</h1>
-                    <p class="card-description">yperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
+                    <p class="card-description">HyperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
                     <h3 class="card-footer"><u>Learn more</u></h3>
                 </div>
                 <div class="card color-2">
-                    <img class="card-image" src="assets/html.png" alt="">
-                    <h1 class="card-title">HTML</h1>
-                    <p class="card-description">yperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
+                    <img class="card-image" src="assets/css.png" alt="">
+                    <h1 class="card-title">CSS</h1>
+                    <p class="card-description">Cascading Style Sheets (CSS) is a simple mechanism for adding style (e.g., fonts, colors, spacing) to Web documents. </p>
                     <h3 class="card-footer"><u>Learn more</u></h3>
                 </div>
                 <div class="card color-3">
-                    <img class="card-image" src="assets/html.png" alt="">
-                    <h1 class="card-title">HTML</h1>
-                    <p class="card-description">yperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.</p>
+                    <img class="card-image" src="assets/js.png" alt="">
+                    <h1 class="card-title">JavaScript</h1>
+                    <p class="card-description">JavaScript is a powerful programming language that can add interactivity to a website. It was invented by Brendan Eich. </p>
                     <h3 class="card-footer"><u>Learn more</u></h3>
                 </div>
             </div>
         </section>
+    </div>
+    <div class="support-section">
+        <h1 class="support-title">I need Support</h1>
+        <p class="support-subtitle">Describe below that what you to take support.</p>
+        <div class="suggest">
+        <input type="text" class="comment-section" placeholder="Suggest me any feedback for me">
+        <input type="button" value="Submit" class="submit-button">
+        </div>
     </div>
 </body>
 </html>
