--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <p class="paragraph-01">I would like to be a programmer in the future. That's my dream job. I'm 16, and I want to start learning.</p>
                 </div>
                 <div>
-                    <button><a class="btn" href="">Contact with me</a></button>
+                    <button><a class="btn" href="#social">Contact with me</a></button>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
                     <img class="box-image01" src="assets/Layer_1.png" alt="">
                  </div>
                  <div class="box-content-1">
-                    <img class="box-image02" src="assets/Layer_1.png" alt="">
+                    <img class="box-image02" src="assets/Group 3.png" alt="">
                     <div class="box-content">
                         <h1 class="title">I will Do Coding and Change The <br> World</h1>
                         <p class="description">Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement</p>
@@ -47,7 +47,7 @@
                         <p class="description">Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement</p>
                         <button class="box-btn">Learn more</button>
                     </div>
-                    <img class="box-image01" src="assets/Layer_1.png" alt="">
+                    <img class="box-image01" src="assets/Group 4.png" alt="">
                  </div>
             </div>
         </section>
@@ -93,6 +93,15 @@
         <div class="suggest">
         <input type="text" class="comment-section" placeholder="Suggest me any feedback for me">
         <input type="button" value="Submit" class="submit-button">
+        </div>
+    </div>
+
+    <div id="social" class="footer-section">
+        <h1 class="footer-heading">An Open Commitment by Shakhawat Hossain</h1>
+        <div class="social-icons">
+        <a target="_blank" href="https://www.facebook.com/designer.bd.salim" class="social-icon"><img src="assets/facebook.png" alt=""></a>
+        <a target="_blank" href="https://github.com/designersalim" class="social-icon"><img src="assets/github.png" alt=""></a>
+        <a target="_blank" href="https://www.linkedin.com/in/shakhawat-hossain-802409301/" class="social-icon"><img src="assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </div>
 </body>
